# llm-zhipu

./: README.md  llm_zhipu.py  pyproject.toml
.github/workflows/: publish.yml
tests/: test_zhipu.py
